fixed a couple of issues on smaller screens

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -9,6 +9,9 @@
   max-width: 900px;
   font-family: sans-serif;
 }
+.jumbotron .row {
+  padding: 40px;
+}
 .bg-grey {
     background-color: #f6f6f6;
 }
@@ -24,6 +27,12 @@
     margin-left: auto;
     margin-right: auto;
 }
+#spacing {
+  display: block;
+  margin-left: 30px;
+  margin-right: auto;
+}
+
 p {
   font-family: 'Raleway', sans;
   font-weight: 400;
